--- a/_posts/2020-07-29-파이썬 데이터 타입 정리하기(1).md
+++ b/_posts/2020-07-29-파이썬 데이터 타입 정리하기(1).md
@@ -1,4 +1,3 @@
-# Untitled
 
 —
 title: "파이썬 데이터 타입 정리하기(1)"
@@ -14,7 +13,7 @@ categories: Development
 
 ## Built - in data type
 
-- 🔢**Numeric (숫자)**
+- 🔢 **Numeric (숫자)**
 
     말 그대로 숫자 데이터.  숫자형 데이터는 연산이 가능하다!!
 
@@ -26,7 +25,7 @@ categories: Development
 
     숫자처럼 생겼지만 다 Numeric 타입은 아니라고...(난 초보라서 혼동한다)
 
-    ```python
+    python
     a = 100
     b = 3.14159278395
     c = 1 +2j
@@ -36,7 +35,7 @@ categories: Development
     print(a+c) #(101+2j)
     print(a+d) #TypeError: unsupported operand type(s) for +: 'int' and 'str'
 
-    ```
+    
 
     - a = int (정수)
     - b = float (실수)
@@ -47,7 +46,7 @@ categories: Development
 
     꼭 구분해서 사용하자!! 😃
 
-- 🔤Text Sequence (문자열)
+- 🔤 Text Sequence (문자열)
 
     파이썬은 문자의 나열로 데이터를 받는다.
 
@@ -55,7 +54,7 @@ categories: Development
 
     문자열도 연산이 가능한데, Numeric과는 좀 다르다.
 
-    ```python
+    python
     A = "듀리"
     B = "쥬와"
     C = "오오오"
@@ -71,7 +70,7 @@ categories: Development
     '''
 
     print((D*15) + "\n" + A + B + C + A + B + "\n" + (D*15))
-    ```
+    
 
     "================"의 문자열을 만들기 위해 D를 15번 곱하고
 
