블로그 수정

--- a/_posts/2020-07-29-파이썬 데이터 타입 정리하기(1).md
+++ b/_posts/2020-07-29-파이썬 데이터 타입 정리하기(1).md
@@ -24,8 +24,7 @@ categories: Development
 
     숫자처럼 생겼지만 다 Numeric 타입은 아니라고...(난 초보라서 혼동한다)
 
-```
-    python
+    ```python
     a = 100
     b = 3.14159278395
     c = 1 +2j
@@ -34,7 +33,7 @@ categories: Development
     print(a+b) #103.14159278395
     print(a+c) #(101+2j)
     print(a+d) #TypeError: unsupported operand type(s) for +: 'int' and 'str'
-
+    ```
     
     - a = int (정수)
     - b = float (실수)
@@ -53,7 +52,7 @@ categories: Development
 
     문자열도 연산이 가능한데, Numeric과는 좀 다르다.
 
-    python
+```python
     A = "듀리"
     B = "쥬와"
     C = "오오오"
@@ -70,7 +69,7 @@ categories: Development
     '''
 
     print((D*15) + "\n" + A + B + C + A + B + "\n" + (D*15))
-    
+    ```
 
     "================"의 문자열을 만들기 위해 D를 15번 곱하고
 
