--- a/_posts/2020-07-29-파이썬 데이터 타입 정리하기(1).md
+++ b/_posts/2020-07-29-파이썬 데이터 타입 정리하기(1).md
@@ -12,6 +12,7 @@ categories: Development
 
 ## Built - in data type
 
+
 - 🔢 **Numeric (숫자)**
 
     말 그대로 숫자 데이터.  숫자형 데이터는 연산이 가능하다!!
@@ -44,6 +45,8 @@ categories: Development
 
     꼭 구분해서 사용하자!! 😃
 
+---
+
 - 🔤 Text Sequence (문자열)
 
     파이썬은 문자의 나열로 데이터를 받는다.
@@ -52,13 +55,13 @@ categories: Development
 
     문자열도 연산이 가능한데, Numeric과는 좀 다르다.
 
-```python
+    ```python
     A = "듀리"
     B = "쥬와"
     C = "오오오"
     D = "="
 
-```
+
     '''
     ================
     두리쥬와오오오두리쥬와 
@@ -78,3 +81,5 @@ categories: Development
     변수를  이렇게 더했다!! ⇒ A + B + C + A + B
 
     (중간의 "\n" 요건 enter키. 안 쓰면 결과가 붙어서 나온다. 중간 중간 쓰면 보기에 참 좋다)
+
+#파이썬
