--- a/_posts/2020-09-04-NumPy 정리 day1.md
+++ b/_posts/2020-09-04-NumPy 정리 day1.md
@@ -1,4 +1,6 @@
-title: "NumPy 정리 day.1"
+---
+
+title: "NumPy 정리 day(1)"
 date: 2020-09-7 23:46:00 +0900
 categories: Development
 
@@ -15,7 +17,7 @@ $ conda install numpy (아나콘다 사용 시)
 
 모듈 설치를 마치고 주피터 노트북에서 새 노트북을 생성한다 😃
 
-![numpy_day1_1_jupyter](markdown-images/numpy_day1_1_jupyter.jpg)
+![numpy_day1_1_jupyter](/assets/images/post/numpy_day1_1_jupyter.jpg)
 
 
 
@@ -254,7 +256,7 @@ plt.plot(arr, '*')
 plt.show()
 ```
 
-![numpy_day1_2_graph_1](markdown-images/numpy_day1_2_graph_1.jpg)
+![numpy_day1_2_graph_1](/assets/images/post/numpy_day1_2_graph_1.jpg)
 
 
 
@@ -276,7 +278,7 @@ plt.hist(arr,bins=100)
 plt.show()
 ```
 
-![numpy_day_1_3_graph2](markdown-images/numpy_day_1_3_graph2.jpg)
+![numpy_day_1_3_graph2](/assets/images/post/numpy_day1_3_graph2.jpg)
 
 
 
@@ -292,7 +294,7 @@ plt.show()
 
 ```
 
-![numpy_day_1_4_graph3](markdown-images/numpy_day_1_4_graph3.jpg)
+![numpy_day_1_4_graph3](/assets/images/post/numpy_day1_4_graph3.jpg)
 
 
 
@@ -307,7 +309,7 @@ plt.hist(arr,bins=100)
 plt.show()
 ```
 
-![numpy_day_1_5_graph4](markdown-images/numpy_day_1_5_graph4.jpg)
+![numpy_day_1_5_graph4](/assets/images/post/numpy_day1_5_graph4.jpg)
 
 
 
@@ -323,7 +325,7 @@ plt.hist(arr,bins=100)
 plt.show()
 ```
 
-![numpy_day_1_6_graph5](markdown-images/numpy_day_1_6_graph5.jpg)
+![numpy_day_1_6_graph5](/assets/images/post/numpy_day1_6_graph5.jpg)
 
 
 
@@ -337,7 +339,7 @@ plt.hist(arr,bins=100)
 plt.show()
 ```
 
-![numpy_day_1_7_graph6](markdown-images/numpy_day_1_7_graph6.jpg)
+![numpy_day_1_7_graph6](/assets/images/post/numpy_day1_7_graph6.jpg)
 
 
 
