사진경로 수정

--- a/_posts/2020-09-04-NumPy 정리 day1.md
+++ b/_posts/2020-09-04-NumPy 정리 day1.md
@@ -278,7 +278,7 @@ plt.hist(arr,bins=100)
 plt.show()
 ```
 
-![numpy_day_1_3_graph2](/assets/images/post/numpy_day1_3_graph2.jpg)
+![numpy_day_1_3_graph2](/assets/images/post/numpy_day_1_3_graph2.jpg)
 
 
 
@@ -294,7 +294,7 @@ plt.show()
 
 ```
 
-![numpy_day_1_4_graph3](/assets/images/post/numpy_day1_4_graph3.jpg)
+![numpy_day_1_4_graph3](/assets/images/post/numpy_day_1_4_graph3.jpg)
 
 
 
@@ -309,7 +309,7 @@ plt.hist(arr,bins=100)
 plt.show()
 ```
 
-![numpy_day_1_5_graph4](/assets/images/post/numpy_day1_5_graph4.jpg)
+![numpy_day_1_5_graph4](/assets/images/post/numpy_day_1_5_graph4.jpg)
 
 
 
@@ -325,8 +325,8 @@ plt.hist(arr,bins=100)
 plt.show()
 ```
 
-![numpy_day_1_6_graph5](/assets/images/post/numpy_day1_6_graph5.jpg)
-
+![numpy_day_1_6_graph5](/assets/images/post/numpy_day_1_6_graph5.jpg)
+{:.img_reduce}
 
 
 ```python
@@ -339,7 +339,7 @@ plt.hist(arr,bins=100)
 plt.show()
 ```
 
-![numpy_day_1_7_graph6](/assets/images/post/numpy_day1_7_graph6.jpg)
+![numpy_day_1_7_graph6](/assets/images/post/numpy_day_1_7_graph6.jpg)
 
 
 
