이미지 경로 수정

--- a/_posts/2020-09-10- Pandas_day(2).md
+++ b/_posts/2020-09-10- Pandas_day(2).md
@@ -47,7 +47,7 @@ display(df)
 
 
 
-![20-09-10-img(1)](../assets/images/post/development/200910/20-09-10-img(1).jpg)
+![20-09-10-img(1)](/assets/images/post/development/200910/20-09-10-img(1).jpg)
 
 
 
@@ -119,7 +119,7 @@ display(df)
 
 
 
-![20-09-10-img(2)](../assets/images/post/development/200910/20-09-10-img(2).jpg)
+![20-09-10-img(2)](/assets/images/post/development/200910/20-09-10-img(2).jpg)
 
 
 
@@ -135,7 +135,7 @@ display(df.tail())
 
 
 
-![20-09-10-img(3)](../assets/images/post/development/200910/20-09-10-img(3).jpg)
+![20-09-10-img(3)](/assets/images/post/development/200910/20-09-10-img(3).jpg)
 
 
 
@@ -251,7 +251,7 @@ display(df)
 
 
 
-![20-09-10-img(4)](../assets/images/post/development/200910/20-09-10-img(4).jpg)
+![20-09-10-img(4)](/assets/images/post/development/200910/20-09-10-img(4).jpg)
 
 
 
@@ -299,19 +299,19 @@ with open('./data/json/books_values_json', 'w', encoding='utf-8') as file:
 
 'columns'
 
-![20-09-10-img(5)](../assets/images/post/development/200910/20-09-10-img(5).jpg)
+![20-09-10-img(5)](/assets/images/post/development/200910/20-09-10-img(5).jpg)
 
 'records'
 
-![20-09-10-img(6)](../assets/images/post/development/200910/20-09-10-img(6).jpg)
+![20-09-10-img(6)](/assets/images/post/development/200910/20-09-10-img(6).jpg)
 
 'index'
 
-![20-09-10-img(7)](../assets/images/post/development/200910/20-09-10-img(7).jpg)
+![20-09-10-img(7)](/assets/images/post/development/200910/20-09-10-img(7).jpg)
 
 'values'
 
-![20-09-10-img(8)](../assets/images/post/development/200910/20-09-10-img(8).jpg)
+![20-09-10-img(8)](/assets/images/post/development/200910/20-09-10-img(8).jpg)
 
 
 
@@ -372,7 +372,7 @@ json_page = json.load(load_page.read())
 
 
 
-![20-09-10-img(9)](../assets/images/post/development/200910/20-09-10-img(9).jpg)
+![20-09-10-img(9)](/assets/images/post/development/200910/20-09-10-img(9).jpg)
 
 
 
@@ -416,7 +416,7 @@ display(movie_df)
 
 
 
-![20-09-10-img(10)](../assets/images/post/development/200910/20-09-10-img(10).jpg)
+![20-09-10-img(10)](/assets/images/post/development/200910/20-09-10-img(10).jpg)
 
 
 
